--- a/app/src/main/res/layout-large-land/activity_workout.xml
+++ b/app/src/main/res/layout-large-land/activity_workout.xml
@@ -46,10 +46,9 @@
         android:layout_height="50dp"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/screenTxt"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="38dp"
         android:layout_centerHorizontal="true"
-        android:visibility="invisible"/>
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="38dp" />
 
     <TextView
         android:id="@+id/currentDayTxt"
@@ -57,9 +56,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/spinnerWeek"
         android:layout_centerHorizontal="true"
-        android:textSize="20sp"
         android:text=""
-        android:textAppearance="?android:attr/textAppearanceSmall" />
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textSize="20sp" />
 
     <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/table"
@@ -148,7 +147,7 @@
                 android:padding="3dp"
                 android:text=""
                 android:textColor="@color/black"
-                android:textSize="20dp"/>
+                android:textSize="20dp" />
         </TableRow>
 
         <TableRow android:id="@+id/tablerow2">
@@ -192,7 +191,7 @@
                 android:layout_centerHorizontal="true"
                 android:background="@drawable/border2"
                 android:onClick="onCheckboxClicked"
-                android:textSize="20dp"/>
+                android:textSize="20dp" />
         </TableRow>
 
         <TableRow android:id="@+id/tablerow3">
@@ -235,7 +234,7 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/border2"
                 android:onClick="onCheckboxClicked"
-                android:textSize="20dp"/>
+                android:textSize="20dp" />
         </TableRow>
 
         <TableRow android:id="@+id/tablerow4">
@@ -279,40 +278,40 @@
                 android:background="@drawable/border2"
                 android:onClick="onCheckboxClicked"
                 android:padding="3dip"
-                android:textSize="20dp"/>
+                android:textSize="20dp" />
         </TableRow>
     </TableLayout>
 
     <Button
-        android:text="@string/workout_finish"
+        android:id="@+id/finish_workout_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/finish_workout_btn"
-        android:visibility="invisible"
-        android:background="@drawable/button_bg_rounded_corners"
-        android:textColor="@color/black"
         android:layout_below="@+id/table"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp" />
+        android:layout_marginTop="16dp"
+        android:background="@drawable/button_bg_rounded_corners"
+        android:text="@string/workout_finish"
+        android:textColor="@color/black"
+        android:visibility="invisible" />
 
     <TextView
-        android:text=""
+        android:id="@+id/workout_info_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:visibility="invisible"
-        android:id="@+id/workout_info_message"
         android:layout_below="@+id/finish_workout_btn"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="12dp"
+        android:text=""
+        android:visibility="invisible" />
 
     <ImageButton
         android:id="@+id/backBtn"
         android:layout_width="70dp"
         android:layout_height="50dp"
-        android:background="@drawable/button_bg_rounded_corners"
-        android:src="@drawable/ic_back_button"
+        android:layout_alignStart="@+id/spinnerWeek"
         android:layout_below="@+id/finish_workout_btn"
-        android:layout_alignStart="@+id/spinnerWeek" />
+        android:background="@drawable/button_bg_rounded_corners"
+        android:src="@drawable/ic_back_button" />
 
 
 </RelativeLayout>
