--- a/app/src/main/res/layout-large/activity_workout.xml
+++ b/app/src/main/res/layout-large/activity_workout.xml
@@ -54,10 +54,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/spinnerWeek"
+        android:layout_centerHorizontal="true"
         android:text=""
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:layout_centerHorizontal="true"
-        android:textSize="20sp"/>
+        android:textSize="20sp" />
 
     <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/table"
@@ -146,7 +146,7 @@
                 android:padding="3dp"
                 android:text=""
                 android:textColor="@color/black"
-                android:textSize="20dp"/>
+                android:textSize="20dp" />
         </TableRow>
 
         <TableRow android:id="@+id/tablerow2">
@@ -190,7 +190,7 @@
                 android:layout_centerHorizontal="true"
                 android:background="@drawable/border2"
                 android:onClick="onCheckboxClicked"
-                android:textSize="20dp"/>
+                android:textSize="20dp" />
         </TableRow>
 
         <TableRow android:id="@+id/tablerow3">
@@ -233,7 +233,7 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/border2"
                 android:onClick="onCheckboxClicked"
-                android:textSize="20dp"/>
+                android:textSize="20dp" />
         </TableRow>
 
         <TableRow android:id="@+id/tablerow4">
@@ -277,7 +277,7 @@
                 android:background="@drawable/border2"
                 android:onClick="onCheckboxClicked"
                 android:padding="3dip"
-                android:textSize="20dp"/>
+                android:textSize="20dp" />
         </TableRow>
     </TableLayout>
 
@@ -293,26 +293,26 @@
         android:src="@drawable/ic_back_button" />
 
     <TextView
-        android:text=""
+        android:id="@+id/workout_info_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:visibility="invisible"
-        android:id="@+id/workout_info_message"
         android:layout_below="@+id/finish_workout_btn"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="12dp"
+        android:text=""
+        android:visibility="invisible" />
 
     <Button
-        android:text="@string/workout_finish"
+        android:id="@+id/finish_workout_btn"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:id="@+id/finish_workout_btn"
-        android:visibility="invisible"
-        android:background="@drawable/button_bg_rounded_corners"
-        android:textColor="@color/black"
-        android:layout_marginTop="15dp"
         android:layout_below="@+id/table"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/button_bg_rounded_corners"
+        android:text="@string/workout_finish"
+        android:textColor="@color/black"
+        android:visibility="invisible" />
 
 
 </RelativeLayout>
